fixed menu item spacing on laptop size but logo Great Idea is 5 pixels short (must have something to do with spacing for box model or something built into it..

--- a/css/index.css
+++ b/css/index.css
@@ -188,14 +188,19 @@ header {
     display: flex;
   }
 }
+@media (min-width: 1100px)  {
+  header nav {
+    width: 100%;
+  }
+}
 header nav ul {
   display: inherit;
   flex-direction: column;
 }
 @media (min-width: 768px)  {
   header nav ul {
-    box-sizing: none;
-    margin: 0 35px 0 35px;
+    box-sizing: content-box;
+    margin: 0 3.97727273% 0 3.97727273%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -209,7 +214,7 @@ header nav ul {
     flex-flow: initial;
     justify-content: initial;
     margin-top: 40px;
-    width: 610px;
+    width: 100%;
     justify-content: space-between;
     display: flex;
   }
@@ -237,8 +242,11 @@ header .logo {
 }
 @media (min-width: 1100px)  {
   header .logo {
+    height: 36px;
+    width: 20.34%;
+    object-fit: fill;
     align-self: flex-end;
-    margin: 28px 0 0 91px;
+    margin: 28px 0 0 10.34%;
   }
 }
 /* Call To Action (CTA) Styles */
